--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
     "angular-eslint": "18.0.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.3.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
